src/main/java/nl/ijmker/test/error/ValueMissingException.java
package nl.ijmker.test.error;

public class ValueMissingException extends RuntimeException {

	private static final long serialVersionUID = -481238145145778352L;

	/**
	 * @param varName
	 */
	public ValueMissingException() {
	}
}
